--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 /node_modules
-/public/build
-/public/hot
-/public/storage
+/public/vendor
+/storage/*.cer
 /storage/*.key
+/data.ms
 /vendor
+/.idea
+/.vscode
 .env
 .env.backup
 .phpunit.result.cache
+.DS_Store
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea
-/.vscode
 supervisord.pid
-/data.ms
