--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,15 @@ services:
       - 80:80
       - 5173:5173
     environment:
-      DOMAIN: www.your.com
-      MAIL: leejoneshane@gmail.com
-      WEB_PASSWORD: 123456
+      APP_URL: http://localhost
+      TZ: Asia/Taipei
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_USERNAME: null
+      MAIL_PASSWORD: null
+      MAIL_ENCRYPTION: null
+      MAIL_FROM_ADDRESS: webmaster@tc.meps.tp.edu.tw
+      MAIL_FROM_NAME: 國語實小E化服務網
       CACHE_DRIVER: redis
       SESSION_DRIVER: redis
       REDIS_HOST: redis
@@ -25,6 +31,16 @@ services:
       XDEBUG_CONFIG: client_host=host.docker.internal
       MEILISEARCH_HOST: http://melisearch:7700
       MEILISEARCH_KEY: masterKey
+      TPEDU_APP: 46
+      TPEDU_SECRET: ksVxXGNhb3j9XCGZRUUMNdsMfriRHknB21aAvP51
+      TPEDU_CALLBACK: https://www2.meps.tp.edu.tw/retrieve.asp
+      TPEDU_TOKEN: eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6ImMwOTE5ZmQxYjA2ZmRlOTk5MDU1MjdlNWRmMTQ1YmUwNjc2NTU5Y2UxOTFiOWY1ZjdjMTBiODA2NmU0YWRmYzFmYTQ2OWMwYzAxNWE4ODU3In0.eyJhdWQiOiIxIiwianRpIjoiYzA5MTlmZDFiMDZmZGU5OTkwNTUyN2U1ZGYxNDViZTA2NzY1NTljZTE5MWI5ZjVmN2MxMGI4MDY2ZTRhZGZjMWZhNDY5YzBjMDE1YTg4NTciLCJpYXQiOjE2MjQwMTk1MzgsIm5iZiI6MTYyNDAxOTUzOCwiZXhwIjoxNjU1NTU1NTM4LCJzdWIiOiIxIiwic2NvcGVzIjpbInByb2ZpbGUiLCJzY2hvb2wiLCJzY2hvb2xBZG1pbiJdfQ.VwxkElum3-pt_wfz7f6b19RtAh1rZ5ztJJvBEWFDwbprsaSDgDK556kj5FkYXj8hNzPJpvncGdmboSQZuzOB1JFRtNg-ihgi7uR4451IyR4dEUihTaVwAMHOHuZK9fEfUq82U-_3mnP4qX9Wvr6fooNOF85Bz-4nXDqXq3vcNZOqILk9ASa89bTV4QiIA9TkD0zA7AL6Sjo3hD9hKTJ2sDBlTr7VD6BN_J1YJh7NXeYxOYnAsnke3ntq5QLrq2SfADKRlTyz2OglmYH5fy-ITepWE0EGp6URayqGNLnHoWDgKCzpq6alNL90iS0MsaBo4a3bWEURvbqOc0WsCZr7ZJomU6NeXxKBvomjMFMDQ5GduMIH9Ja1UzNzjb13qJt74_SzVdIC-PaP-F0wU2GM4cmBCLaqHRs5XLwV2cIAgUO16zjMnc2wbmcbdzClwqjVTcUqv_6kWjxkc2LFFSfuNKD1yyZhnI5tya5nw8phkIFKnN3Y08MuyVoEprwc-pcPRZRIKjcEth-7DnTpkvHccJwu-sWSVGU9bNsjaKCCJVjA0se5I_8xjpivrMh0bJb7AlML1kno8RUZj-JOBybC3jVe0d64SQbjxX65ondRMeJmyNfxdw8DHLhw36L9UfgzJVWQXMoHQ698jOTX8vp1tC1VQPdvBhj86oSJxSITS-M
+      SCHOOL: meps
+      AD_HOST: ad06
+      AD_PASS: ad_password
+      AD_BASE_DN: DC=meps,DC=tp,DC=edu,DC=tw
+      AD_USERS_DN: CN=users,DC=meps,DC=tp,DC=edu,DC=tw
+      AD_CA_FILE: /var/www/html/storage/ad.cer
     volumes:
       - ./:/var/www/html
     networks:
@@ -59,7 +75,6 @@ services:
   mailhog:
     image: mailhog/mailhog
     ports:
-      - 1025:1025
       - 8025:8025
     networks:
       - backend
