--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "laravel/socialite": "^5.5",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
-        "meilisearch/meilisearch-php": "^0.24.0",
-        "rlanvin/php-rrule": "^2.3"
+        "meilisearch/meilisearch-php": "^0.24.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
