--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/socialite": "^5.5",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
-        "meilisearch/meilisearch-php": "^0.24.0"
+        "meilisearch/meilisearch-php": "^0.24.0",
+        "spatie/icalendar-generator": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
