--- a/html/composer.json
+++ b/html/composer.json
@@ -17,6 +17,7 @@
         "laravel/socialite": "^5.5",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
         "meilisearch/meilisearch-php": "^0.24.0",
         "spatie/icalendar-generator": "^2.3"
     },
