--- a/html/composer.json
+++ b/html/composer.json
@@ -10,6 +10,7 @@
         "google/apiclient": "^2.12",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
+        "innocenzi/laravel-vite": "0.2.*",
         "laravel/framework": "^9.19",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
