--- a/html/package.json
+++ b/html/package.json
@@ -5,17 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
-        "axios": "^0.25",
-        "bootstrap": "^5.1.3",
-        "laravel-vite-plugin": "^0.4.0",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vite": "^2.9.11",
-        "vue": "^2.6.12",
-        "vue-template-compiler": "^2.6.12"
+        "autoprefixer": "^10.4.7",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.6",
+        "vite": "^2.9.14",
+        "vite-plugin-laravel": "^0.2.0-beta.28"
+    },
+    "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/line-clamp": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.4"
     }
 }
