add classes manager page

--- a/html/composer.json
+++ b/html/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "beyondcode/laravel-websockets": "^1.13",
         "doctrine/dbal": "^3.3",
         "google/apiclient": "^2.12",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
-        "innocenzi/laravel-vite": "0.2.*",
+        "innocenzi/laravel-vite": "^0.1.27",
         "laravel/framework": "^9.19",
         "laravel/passport": "^10.4",
-        "laravel/sanctum": "^2.14.1",
+        "laravel/sanctum": "^3.0",
         "laravel/scout": "^9.4",
         "laravel/socialite": "^5.5",
         "laravel/telescope": "^4.9",
@@ -24,7 +25,6 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
