--- a/html/package.json
+++ b/html/package.json
@@ -8,13 +8,13 @@
         "autoprefixer": "^10.4.7",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.6",
-        "vite": "^2.9.14",
         "vite-plugin-laravel": "^0.2.0-beta.28"
     },
     "dependencies": {
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.4"
+        "@tailwindcss/typography": "^0.5.4",
+        "vite": "^3.0.4"
     }
 }
