--- a/html/package.json
+++ b/html/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/node": "^18.7.1",
         "autoprefixer": "^10.4.7",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.6",
@@ -15,6 +16,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/line-clamp": "^0.4.0",
         "@tailwindcss/typography": "^0.5.4",
+        "axios": "^0.27.2",
         "vite": "^3.0.4"
     }
 }
