--- a/html/package.json
+++ b/html/package.json
@@ -17,6 +17,8 @@
         "@tailwindcss/line-clamp": "^0.4.0",
         "@tailwindcss/typography": "^0.5.4",
         "axios": "^0.27.2",
+        "laravel-echo": "^1.14.0",
+        "pusher-js": "^7.4.0",
         "vite": "^3.0.4"
     }
 }
