--- a/html/composer.json
+++ b/html/composer.json
@@ -20,7 +20,9 @@
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^0.24.2",
+        "psr/simple-cache": "2",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/google": "^4.1",
         "socialiteproviders/line": "^4.1",
