--- a/html/composer.json
+++ b/html/composer.json
@@ -22,6 +22,7 @@
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^0.24.2",
+        "phpoffice/phpword": "^0.18.3",
         "psr/simple-cache": "2",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/google": "^4.1",
