--- a/html/composer.json
+++ b/html/composer.json
@@ -12,17 +12,18 @@
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
         "innocenzi/laravel-vite": "^0.1.27",
+        "jenssegers/agent": "*",
         "laravel/framework": "^9.19",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^3.0",
-        "laravel/scout": "^9.4",
+        "laravel/scout": "^9.7",
         "laravel/socialite": "^5.5",
-        "laravel/telescope": "^4.9",
+        "laravel/telescope": "^4.11",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
-        "meilisearch/meilisearch-php": "^0.25.0",
-        "phpoffice/phpword": "^0.18.3",
+        "meilisearch/meilisearch-php": "^0.27.0",
+        "phpoffice/phpword": "1",
         "psr/simple-cache": "2",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/google": "^4.1",
