--- a/html/package.json
+++ b/html/package.json
@@ -6,19 +6,20 @@
     },
     "devDependencies": {
         "@types/node": "^18.7.1",
-        "autoprefixer": "^10.4.7",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.6",
-        "vite-plugin-laravel": "^0.2.0-beta.28"
-    },
-    "dependencies": {
-        "@tailwindcss/aspect-ratio": "^0.4.0",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/line-clamp": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.4",
-        "axios": "^0.27.2",
         "laravel-echo": "^1.14.0",
         "pusher-js": "^7.4.0",
-        "vite": "^3.0.4"
+        "laravel-vite-plugin": "^0.7.2",
+        "vite": "^3.0.9"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.7",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.2.1",
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/line-clamp": "^0.4.2",
+        "@tailwindcss/typography": "^0.5.4",
+        "axios": "^0.27.2",
+        "flowbite": "^1.5.3"
     }
 }
