--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       LINE_CLIENT_SECRET: secret
       VITE_PUSHER_APP_ID: eschool
       VITE_PUSHER_APP_SECRET: meps_eschool_websocket
-      VITE_PUSHER_APP_KEY: ksVxXGNhb3j9XCGZRUUMNdsMfriRHknB21aAvP51
+      VITE_PUSHER_APP_KEY: websocket_key
       VITE_PUSHER_HOST: ws.meps.tp.edu.tw
       VITE_PUSHER_PORT: 443
       VITE_PUSHER_SCHEME: https
